--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			</div>
 			<div class="postcard-body">
 				<div class="body-left">
-					<p>Hola María, ¿cómo puedes ser tan guapa? Te estoy escribiendo esta postal como ejercicio.</p>
+					<p>Look how awesome! This is a postcard that I created using HTML5 and CSS3 during my 4Geeks Academy Course!</p>
 					<br />
-					<p>Te echo de menos hermosa, estoy deseando ir a verte. :)</p>
+					<p>This is so cool, can't wait to start doing more stuff!</p>
 				</div>
 				<div class="body-right">
 					<input name="Name" placeholder="Some Name" />
@@ -29,6 +29,7 @@
 			</div>
 			<div class="postcard-footer">
 				<button>Send My Postcard</button>
+				<a href="mailto:mailto@mail.com">Click aquí enviar</a>
 			</div>
 		</div>
 	</body>
