--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 			<div class="postcard-footer">
 				<button>Send My Postcard</button>
-				<a href="mailto:mailto@mail.com">Click aquí enviar</a>
+				<!-- <a href="mailto:mailto@mail.com">Click aquí enviar</a> -->
 			</div>
 		</div>
 	</body>
